@@ -1,3 +1,4 @@
+echo variety of lenghths for string_1
 /usr/bin/env /Library/Java/JavaVirtualMachines/temurin-20.jdk/Contents/Home/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/matgib/repos/CS5000/A03/bin StringMethods M Gibson 
 /usr/bin/env /Library/Java/JavaVirtualMachines/temurin-20.jdk/Contents/Home/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/matgib/repos/CS5000/A03/bin StringMethods Ma Gibson 
 /usr/bin/env /Library/Java/JavaVirtualMachines/temurin-20.jdk/Contents/Home/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/matgib/repos/CS5000/A03/bin StringMethods Mat Gibson 
@@ -6,5 +7,9 @@
 /usr/bin/env /Library/Java/JavaVirtualMachines/temurin-20.jdk/Contents/Home/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/matgib/repos/CS5000/A03/bin StringMethods Matthe Gibson 
 /usr/bin/env /Library/Java/JavaVirtualMachines/temurin-20.jdk/Contents/Home/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/matgib/repos/CS5000/A03/bin StringMethods Matthew Gibson 
 
+echo testing case sensitivity in the equals check
 /usr/bin/env /Library/Java/JavaVirtualMachines/temurin-20.jdk/Contents/Home/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/matgib/repos/CS5000/A03/bin StringMethods Matthew Matthew
 /usr/bin/env /Library/Java/JavaVirtualMachines/temurin-20.jdk/Contents/Home/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/matgib/repos/CS5000/A03/bin StringMethods Matthew matthew
+
+echo sample test data
+/usr/bin/env /Library/Java/JavaVirtualMachines/temurin-20.jdk/Contents/Home/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp /Users/matgib/repos/CS5000/A03/bin StringMethods John Amy
